[package]
authors = ["Trent Shailer"]
description = "Various helper functions, structures, and traits for creating my CLIs."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ts-cli-helper"
rust-version = "1.88"
version = "0.6.0"

[dependencies]
# Generating source code
proc-macro2 = { version = "1.0", default-features = false, optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true }

# Create valid `ident`
convert_case = { version = "0.8" }
regex = { version = "1.11", default-features = false, features = ["std"] }

ts-rust-helper = { version = "0.7", features = ["styled"] }

[features]
generate = ["dep:proc-macro2", "dep:quote", "dep:syn"]

[lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
